<resources>
    <string name="app_name">MBYSA || FIT2D</string>
    <string name="header_text">MBYSA || FIT2D</string>
    <string name="search_product_hint">Search for products...</string>
    <string name="featured_products_title">Featured Products</string>
    <string name="all_products_title">All Products</string>
    <string name="new_products_title">New Products</string>
    <string name="related_products_title">Related Products</string>
    <string name="comments_title">Comments</string>
    <string name="no_comments_found">No comments found</string>
    <string name="buy_now_btn">Buy Now</string>
    <string name="virtual_try_on_btn">Virtual Try-On</string>
    <string-array name="sort_options">
        <item>Sort by Latest</item>
        <item>Sort by Oldest</item>
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
    </string-array>
</resources>